# vizor_ai_platform

./: .gitignore  README.md
docs/: 2026-07-03-frs-boilerplate-design.md
platform/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
platform/deploy/: Caddyfile  README.md  docker-compose.tls.yml
platform/edge/: __init__.py  app.py  hooks.py
platform/edge/auth/: __init__.py  deps.py  models.py  permissions.py  router.py  schemas.py  security.py  service.py
platform/edge/branding/: __init__.py  models.py  router.py  schemas.py  service.py
platform/edge/core/: __init__.py  api.py  audit.py  config.py  errors.py  health.py  license.py  limits.py  logging.py  metrics.py  modules.py  pagination.py  ratelimit.py  realtime.py  secrets.py  storage.py  ws_auth.py
platform/edge/db/: __init__.py  base.py  timeseries.py
platform/edge/licensing/: __init__.py  router.py
platform/edge/messaging/: __init__.py  config.py  dispatcher.py  email.py  inapp.py  push.py  router.py  template_store.py  templates.py  webhook.py
platform/edge/models/: __init__.py  face.py
platform/edge/reports/: __init__.py  export.py  models.py  router.py  schemas.py  service.py
platform/edge/runtime/: __init__.py  base.py  manifest.py  onnx_backend.py  openvino_backend.py  registry.py  tensorrt_backend.py
platform/edge/search/: __init__.py  router.py
platform/edge/settings/: __init__.py  catalog.py  models.py  router.py  schemas.py  service.py
platform/edge/stream/: __init__.py  annotate.py  backpressure.py  mediamtx.py  rtsp.py
platform/edge/system/: __init__.py  resources.py  router.py
platform/edge/tasks/: __init__.py  app.py  base.py  retention.py
platform/edge/vectordb/: __init__.py  qdrant.py
platform/example/: main.py
platform/migrations/: env.py
platform/migrations/versions/: 0002_auth_tokens.py  0003_email_templates.py
platform/tests/: conftest.py  test_auth.py  test_auth_hardening.py  test_cv.py  test_health_metrics.py  test_license_gate.py  test_limits.py  test_pagination_errors.py  test_rbac.py
platform/tools/: gen_license.py
platform/web/: CommandPalette.jsx  Providers.jsx  README.md  SystemResources.jsx  TitleSync.jsx  api.js  auth.js  kit.jsx  theme.css  theme.jsx
platform/web/pages/: Account.jsx  ApiKeys.jsx  Audit.jsx  Branding.jsx  Channels.jsx  Dashboard.jsx  EmailTemplates.jsx  ErrorView.jsx  ForgotPassword.jsx  Health.jsx  License.jsx  Loading.jsx  Login.jsx  NotFound.jsx  Notifications.jsx  Roles.jsx  SettingsGeneral.jsx  Setup.jsx  Users.jsx
platform/web/shell/: AppLayout.jsx  AuthLayout.jsx  Footer.jsx  Header.jsx
template/: .env.example  .env.shared.example  .gitignore  README.md  docker-compose.shared.yml  docker-compose.yml  sync-platform.sh
template/backend/: Dockerfile  alembic.ini  pyproject.toml
template/backend/app/: main.py  registry.py
template/backend/app/api/: __init__.py
template/backend/app/domain/: models.py  permissions.py
template/backend/migrations/versions/: 0001_baseline.py
template/backend/scripts/: ensure_db.py
(+52 files in other folders)
