[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edge"
version = "0.1.0"
description = "Reusable edge/inference core for single-tenant CV scenario apps (FRS, ANPR, ...)"
requires-python = ">=3.11"

# --- Core deps: needed by every scenario app -------------------------------
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",          # async Postgres driver
    "alembic>=1.13",          # DB migrations
    "pyjwt[crypto]>=2.8",     # app-auth JWTs AND license verification (EdDSA)
    "cryptography>=42.0",     # Ed25519 keys for licensing
    "argon2-cffi>=23.0",      # password hashing (argon2id — OWASP default)
    "email-validator>=2.1",   # EmailStr validation
    "python-multipart>=0.0.9",  # multipart/form-data (file uploads, e.g. branding logo)
    "prometheus-client>=0.20",  # /metrics endpoint
    "httpx>=0.27",
]

[project.optional-dependencies]
# Install per scenario depending on what it needs — keeps deploys lean.
runtime   = ["onnxruntime>=1.18", "numpy>=1.26", "opencv-python-headless>=4.9"]
# Self-contained GPU stack (do NOT combine with `runtime` — onnxruntime and
# onnxruntime-gpu provide the same package and conflict). Includes numpy/opencv
# so the GPU image installs [...,vector,gpu] without needing `runtime`.
gpu       = ["onnxruntime-gpu>=1.18", "numpy>=1.26", "opencv-python-headless>=4.9", "nvidia-ml-py>=12.0"]
openvino  = ["openvino>=2024.0"]          # runtime OpenVINO backend (optional)
vector    = ["qdrant-client>=1.9"]        # only scenarios that match by embedding (FRS, Suspect)
storage   = ["aioboto3>=13.0"]            # only when storage_backend=s3
messaging = ["aiosmtplib>=3.0", "jinja2>=3.1"]
tasks     = ["celery>=5.3", "redis>=5.0", "psycopg2-binary>=2.9"]  # sync DB driver for workers/streams
reports   = ["openpyxl>=3.1", "reportlab>=4.0"]
system    = ["psutil>=5.9"]
dev       = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "aiosqlite>=0.20"]

[tool.setuptools.packages.find]
include = ["edge*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
